hard-gists/3823483/run.log
=== Docker Run Log for 3823483 ===
Started at: Mi 29. Okt 14:01:17 CET 2025

[2025-10-29 14:01:18] START: Running container for 3823483
[2025-10-29 14:01:18] SUCCESS: Container 8a42f89e6df4b6841fc3d4049e7307648b9990ef80ecb1b0e0db8b3e867ec666 started for 3823483
=== Container logs for 3823483 ===
  File "/snippet.py", line 138
    print 'Open this page in your browser:'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3823483 ===
[2025-10-29 14:01:20] INFO: Container 8a42f89e6df4b6841fc3d4049e7307648b9990ef80ecb1b0e0db8b3e867ec666 has stopped
